Fix contributing link

--- a/src/misc/readme
+++ b/src/misc/readme
@@ -35,7 +35,7 @@ Lorem ipsum
 
 ## Contributing
 
-Want to contribute? Follow these [recommendations](contributing.md).
+Want to contribute? Follow these [recommendations](.github/contributing.md).
 
 
 ## License
