Add custom license information

--- a/src/misc/readme
+++ b/src/misc/readme
@@ -40,4 +40,4 @@ Want to contribute? Follow these [recommendations](.github/contributing.md).
 
 ## License
 
-Designed with ♥ by [[fullname]](#). Licensed under the MIT License.
+Designed with ♥ by [[fullname]](#). Licensed under the [[license] License](license).
